--- a/NBAManagmentSystem/NBAManagmentSystem.csproj
+++ b/NBAManagmentSystem/NBAManagmentSystem.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -69,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BD.tt</DependentUpon>
     </Compile>
+    <Compile Include="ColorStart.cs" />
     <Compile Include="Conference.cs">
       <DependentUpon>BD.tt</DependentUpon>
     </Compile>
@@ -85,8 +87,14 @@
     <Compile Include="Matchup.cs">
       <DependentUpon>BD.tt</DependentUpon>
     </Compile>
+    <Compile Include="MatchupPage.xaml.cs">
+      <DependentUpon>MatchupPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MatchupType.cs">
       <DependentUpon>BD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PhotoPage.xaml.cs">
+      <DependentUpon>PhotoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Photos.cs" />
     <Compile Include="Pictures.cs">
@@ -112,6 +120,9 @@
     </Compile>
     <Compile Include="Team.cs">
       <DependentUpon>BD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VisitorMenu.xaml.cs">
+      <DependentUpon>VisitorMenu.xaml</DependentUpon>
     </Compile>
     <Page Include="ImagePreview.xaml">
       <SubType>Designer</SubType>
@@ -147,6 +158,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MatchupPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PhotoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VisitorMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
